--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,15 @@
 elinks (0.11-cvs.1) unstable; urgency=low
 
   * NMU
+  * Only read from /dev/stdin if no URL was given on the command line and
+    automatically allow special files to be read (closes: #296976)
   * Fix repeatedly and endless refreshing of documents that triggers a
     download (like sourceforge's download pages) (closes: #293298)
   * Add watch file, thanks Hugo Haas
+  * Scrolling was heavily reworked during the 0.10 development phase and now
+    uses the correct width / height when scrolling (closes: #256533)
 
- -- Jonas Fonseca <fonseca@diku.dk>  Tue, 11 Jan 2005 19:29:31 +0100
+ -- Jonas Fonseca <fonseca@diku.dk>  Tue, 22 Mar 2005 12:09:29 +0100
 
 elinks (0.10.2-1) unstable; urgency=low
 
