Support for Lua4.x was dropped in favor of support for Lua5.x. Configure script Lua detection was improved, C code was modified to use Lua 5.x functions (lua_pcall() is always available, lua_open() has no parameter). NEWS file was updated.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 See ChangeLog for recent changes, bugfixes and new features.
 
+ELinks 0.10.3:
+* Support for Lua 4.x was dropped, we only support Lua 5.x now.
+
 ELinks 0.10.2:
 
 * Ruby scripting back-end (experimental)
